[UI/UX] Navigation is fixed on large screens and swipeable on small.

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,15 +3,21 @@ body {
   margin: 0;
 }
 
-/* Styling of elements inside the header */
-.header {
-  background-color: rgb(40, 40, 40);
+.main_section {
+  height: 120vh;
 }
 
-.menu_icon {
-  color: white;
+.fixed_header {
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
-.heading {
-  font-family: "Akaya Telivigala";
+.fixed_nav {
+  position: fixed;
+  left: 0;
+  top: 20%;
+  width: 60px;
+  height: 40vh;
+  border: 1px solid black;
 }
